--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2021"
 handlr-regex = { path = "../handlr-regex" }
 clap = { version = "3.1.9", features = ["derive"] }
 clap_mangen = "0.1"
+clap_complete = "3.1.2"
 regex = "1"
 devx-cmd = { version = "0.5" }
