--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,7 +41,9 @@ path = "src/main.rs"
 
 [dev-dependencies]
 insta = "1.42.2"
+insta-cmd = "0.6.0"
 similar-asserts = "1.7.0"
+test-case = "3.3.1"
 
 [build-dependencies]
 clap = { version = "4.5.2", features = ["derive"] }
