--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,11 @@ serde_with = "3.8.3"
 wildmatch = "2.3.4"
 mutants = "0.0.3"
 clap_complete = { version = "4.5.33", features = ["unstable-dynamic"] }
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
+tracing-appender = "0.2.3"
+tracing-unwrap = "1.0.1"
+clap-verbosity-flag = { version = "3.0.3", default-features = false, features = ["tracing"] }
 
 [[bin]]
 name = "handlr"
@@ -50,6 +55,7 @@ clap_complete = { version = "4.5.33", features = ["unstable-dynamic"] }
 clap_mangen = "0.2.20"
 mime-db = "1.3.0"
 mutants = "0.0.3"
+clap-verbosity-flag = { version = "3.0.3", default-features = false, features = ["tracing"] }
 
 [profile.release]
 opt-level = "z"
