--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ serde_json = "1.0"
 serde_regex = "1.1.0"
 enum_dispatch = "0.3.13"
 freedesktop-desktop-entry = "0.6.1"
-derive_more = { version = "0.99.18", default-features = false, features = ["deref", "deref_mut"] }
+derive_more = { version = "0.99.18", default-features = false, features = ["deref", "deref_mut", "display"] }
 serde_ini = "0.2.0"
 serde_with = "3.8.3"
 wildmatch = "2.3.4"
