--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,7 @@ path = "src/main.rs"
 [dev-dependencies]
 insta = { version = "1.42.2", features = ["filters"] }
 insta-cmd = "0.6.0"
+pipe = "0.4.0"
 similar-asserts = "1.7.0"
 
 [build-dependencies]
